--- a/index.html
+++ b/index.html
@@ -93,27 +93,117 @@
         <div class="container">
             <div class="slide_swp  mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
-                    <div class="swiper-slide">Slide 8</div>
-                    <div class="swiper-slide">Slide 9</div>
+                    <div class="swiper-slide">
+                        <a href="#"><img src="./img/banner_home1.png" alt="slide"></a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#"><img src="./img/banner_home1.png" alt="slide"></a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#"><img src="./img/banner_home1.png" alt="slide"></a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#"><img src="./img/banner_home1.png" alt="slide"></a>
+                    </div>
                 </div>
                 <div class="swiper-pagination"></div>
+            </div>
+            <div class="banner_2">
+                <a href="#"><img src="./img/banner_home3.png" alt=""></a>
             </div>
         </div>
     </div>
 
+    <div class="banners_4">
+        <div class="container">
+            <div class="box">
+                <a href="#" class="link_btn"></a>
+                <img src="./img/banner3_1.png" alt="baner">
+                <div class="text">
+                    <h5>Break Disc</h5>
+                    <h5>deals on this</h5>
+                    <div class="sale">
+                        <p>UP <br> TO</p>
+                        <span>70%</span>
+                    </div>
+                    <h6>Shop Now</h6>
+                </div>
+            </div>
 
+            <div class="box">
+                <a href="#" class="link_btn"></a>
+                <img src="./img/banner3_2.png" alt="baner">
+                <div class="text">
+                    <h5>Break Disc</h5>
+                    <h5>deals on this</h5>
+                    <div class="sale">
+                        <p>UP <br> TO</p>
+                        <span>70%</span>
+                    </div>
+                    <h6>Shop Now</h6>
+                </div>
+            </div>
 
-    
-    <script src="./js/main.js"></script>
+            <div class="box">
+                <a href="#" class="link_btn"></a>
+                <img src="./img/banner3_3.png" alt="baner">
+                <div class="text">
+                    <h5>Break Disc</h5>
+                    <h5>deals on this</h5>
+                    <div class="sale">
+                        <p>UP <br> TO</p>
+                        <span>70%</span>
+                    </div>
+                    <h6>Shop Now</h6>
+                </div>
+            </div>
+
+            <div class="box">
+                <a href="#" class="link_btn"></a>
+                <img src="./img/banner3_4.png" alt="baner">
+                <div class="text">
+                    <h5>Break Disc</h5>
+                    <h5>deals on this</h5>
+                    <div class="sale">
+                        <p>UP <br> TO</p>
+                        <span>70%</span>
+                    </div>
+                    <h6>Shop Now</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slider_products slide">
+        <div class="container">
+            <div class="slide_product mySwiper">
+                <div class="products swiper-wrapper" id="swiper_items_sale">
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script src="./js/main.js"></script>
+    <script>
+
+    </script>
 </body>
 
 </html>
