--- a/index.html
+++ b/index.html
@@ -177,7 +177,12 @@
     <div class="slider_products slide">
         <div class="container">
             <div class="slide_product mySwiper">
+                <div class="top_slide">
+                    <h2><i class="fa-solid fa-tags"></i>Hot Deals</h2>
+                </div>
+
                 <div class="products swiper-wrapper" id="swiper_items_sale">
+
                     <div class="swiper-slide product">
                         <span class="sale_present">50%</span>
                         <div class="img_product">
@@ -190,8 +195,189 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
                     </div>
+
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-slide product">
+                        <span class="sale_present">50%</span>
+                        <div class="img_product">
+                            <a href="#"><img src="./img/product/0.png" alt="product"></a>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+
+                        <p class="name_product"><a href="#">Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Quas est doloribus
+                                ea voluptatibus labore molestiae dolorum ipsum non excepturi veritatis.</a></p>
+                        <div class="price">
+                            <p><span>50$</span></p>
+                            <p class="old_price">80$</p>
+                        </div>
+                        <div class="icons">
+                            <span class="btn_add_cart"><i class="fa-solid fa-cart-shopping"></i> Add to cart</span>
+                            <span class="icon_product"><i class="fa-regular fa-heart"></i></span>
+                        </div>
+
+                    </div>
+
                 </div>
+
+                <div class="swiper-button-next btn_swip"></div>
+                <div class="swiper-button-prev btn_swip"></div>
+
+
             </div>
         </div>
     </div>
@@ -201,6 +387,7 @@
 
     <!-- Initialize Swiper -->
     <script src="./js/main.js"></script>
+    <script src="./js/swiper.js"></script>
     <script>
 
     </script>
